# pulumi-first

./: .gitignore
app/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
infra/: Pulumi.yaml  README.md  __main__.py  pyproject.toml
